tests/testdata/check/jsx_not_checked/main.out
[UNORDERED_START]
Download http://localhost:4558/react
Download http://localhost:4558/loose-envify
Download http://localhost:4558/js-tokens
Download http://localhost:4558/react/react-18.2.0.tgz
Download http://localhost:4558/loose-envify/loose-envify-1.4.0.tgz
Download http://localhost:4558/js-tokens/js-tokens-4.0.0.tgz
[UNORDERED_END]
Check file:///[WILDCARD]/jsx_not_checked/main.jsx
error: TS2345 [ERROR]: Argument of type 'string' is not assignable to parameter of type 'number'.
console.log(add("1", "2"));
                ~~~
    at file:///[WILDCARD]/other.ts:5:17
